# TweetPopularityPrediction

./: .gitignore  .gitlab-ci.yml  README.md  run_image.bash
docker/: Dockerfile  Dockerfile.Hawkes  Dockerfile.Learner  Dockerfile.Logger  Dockerfile.Predictor  Dockerfile.Topics  Dockerfile.TweetCollector  Dockerfile.TweetGenerator  README.md  clean_builds_bins.sh  docker-compose-dashboard.yaml  docker-compose-middleware.yml  docker-compose-services.yml  entrypoint.sh  launch_zookeeper.sh  topicsCreation.sh
docker/dashboard/: Dockerfile.Grafana  Dockerfile.Logs2Dashboard  Dockerfile.Loki  Dockerfile.Prometheus  Dockerfile.StatAlert2Dashboard
docker/install_script/: install_basics.sh  install_boost.sh  install_cppkafka.sh  install_gaml.sh  install_kafka.sh  install_python_packages.sh
docker/kafka/: start_kafka.sh
docker/services/: Dockerfile.Hawkes
kubernetes/: README.md
kubernetes/intercell/: build_secret_intercell.sh  dashboard-intercell.yml  tweetoscopeapp-intercell.yml  zookeeper-and-kafka-intercell.yml
kubernetes/minikube/: build_secret.sh  dashboard.yml  tweetoscopeapp.yml  zookeeper-and-kafka.yml
src/: .gitignore  README.MD
src/dashboard/: README.md
src/dashboard/config/: prometheus-config.yaml
src/dashboard/config/provisioning/dashboards/: tweetoscope_dashboard.json
src/dashboard/config/provisioning/datasources/: datasources.yaml
src/dashboard/src/: logs_to_dashboard.py  stat_alert_to_dashboard.py
src/hawkes_estimator/: hawkes_estimator.py
src/hawkes_estimator/app/: hawkes_estimator.py
src/hawkes_estimator/src/: fake_data.py  map.py  mle.py  prediction.py  utils.py
src/hawkes_estimator/test/: publish_fake_data.py
src/kafka_logger/: debug_kafka.py  logger.py
src/learner/: estimator.py  learner.py
src/logger/: logger.py
src/predictor/: main.py
src/predictor/src/: cascade.py  predictor.py
src/predictor/test/: send_cascade_properties_msg.py
src/tweet_collector/: CMakeLists.txt  params.config  params_deployment.config  tweet-collector
src/tweet_collector/app/: CMakeLists.txt  tweetoscopeCollector.cpp
src/tweet_collector/include/: tweetoscopeCascade.hpp  tweetoscopeCollectorParams.hpp  tweetoscopeConsumer.hpp  tweetoscopeProcessor.hpp  tweetoscopeProducer.hpp  tweetoscopeTweetReader.hpp
src/tweet_collector/script/: clean.sh
src/tweet_collector/src/: CMakeLists.txt  tweetoscopeCascade.cpp  tweetoscopeConsumer.cpp  tweetoscopeProcessor.cpp  tweetoscopeProducer.cpp
src/tweet_collector/test/: CMakeLists.txt  cascade_test  examples_test.cpp  processor_test  test-queue  test_cascade.cpp  test_processor.cpp
src/tweet_generator/: CMakeLists.txt  params.config  params_deployment.config
src/tweet_generator/script/: build.sh
src/tweet_generator/src/: CMakeLists.txt  tweet-generator.cpp  tweetoscopeGenerator.hpp
